<resources>
    <string name="add_description_mini">Join your favorite communities in Campfire</string>
    <string name="add_description">Campfire offers many social functions. Fandoms, chats, system and karma. Create an account and become a moderator of the fandom. For each community there is only one fandom, there is no creator or administrator, fandom is controlled only by its subscribers.

        Campfire has anime fandoms and gaming fandoms.</string>
    <string name="app_whoops">Whoops!</string>
    <string name="app_retry">Retry</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_continue">Continue</string>
    <string name="app_back">Back</string>
    <string name="app_dont_show_again">Don\'t show again</string>
    <string name="app_attention">Attention</string>
    <string name="app_download">Download</string>
    <string name="app_downloading">Downloading</string>
    <string name="app_downloaded">Downloaded</string>
    <string name="app_loading">Loading</string>
    <string name="app_loading_dots">Loading…</string>
    <string name="app_done">Done</string>
    <string name="app_choose">Choose</string>
    <string name="app_link">Link</string>
    <string name="app_notifications">Notifications</string>
    <string name="app_notify">Notify</string>
    <string name="app_pin">Pin</string>
    <string name="app_unpin">Unpin</string>
    <string name="app_style">Style</string>
    <string name="app_bookmarks">Bookmarks</string>
    <string name="app_to_finish">Finish</string>
    <string name="app_draft">Draft</string>
    <string name="app_drafts">Drafts</string>
    <string name="app_settings">Settings</string>
    <string name="app_about">About</string>
    <string name="app_report">Report</string>
    <string name="app_update">Update</string>
    <string name="app_remove">Remove</string>
    <string name="app_to_drafts">To drafts</string>
    <string name="app_move">Move</string>
    <string name="app_display_above">Display above…</string>
    <string name="app_display_before">Display before…</string>
    <string name="app_block">Block</string>
    <string name="app_blocked">Blocked</string>
    <string name="app_block_title">Block</string>
    <string name="app_change">Change</string>
    <string name="app_send">Send</string>
    <string name="app_search">Search</string>
    <string name="app_comment">Comment</string>
    <string name="app_exit">Exit</string>
    <string name="app_follows">Follows</string>
    <string name="app_followers">Followers</string>
    <string name="app_rates">Rates</string>
    <string name="app_publications">Publications</string>
    <string name="app_publication">Publication</string>
    <string name="app_removed">Removed</string>
    <string name="app_reported">Your report was received. We will check this shortly.</string>
    <string name="app_report_already_exist">You have already reported this</string>
    <string name="app_published">Published</string>
    <string name="app_publish">Publish</string>
    <string name="app_changed">Changed</string>
    <string name="app_save">Save</string>
    <string name="app_accept">Accept</string>
    <string name="app_restore">Restore</string>
    <string name="app_i_agree">I agree</string>
    <string name="app_achievements">Achievements</string>
    <string name="app_clear_reports">Clear reports</string>
    <string name="app_clear_reports_confirm">Clear reports?</string>
    <string name="app_clear">Clear</string>
    <string name="app_clear_2">Clear</string>
    <string name="app_no">No</string>
    <string name="app_yes">Yes</string>
    <string name="app_punish">Punish</string>
    <string name="app_punishments">Punishments</string>
    <string name="app_punish_confirm">Punish this user?</string>
    <string name="app_level">Level</string>
    <string name="app_karma_count_30_days">Karma in 30 days</string>
    <string name="app_karma">Karma</string>
    <string name="app_username">Username</string>
    <string name="app_nothing_found">Nothing Found</string>
    <string name="app_privilege">Privilege</string>
    <string name="app_copy">Copy</string>
    <string name="app_quote">Quote</string>
    <string name="app_copied">Copied</string>
    <string name="app_message">Message</string>
    <string name="app_name_s">Name</string>
    <string name="app_ratings">Ratings</string>
    <string name="app_tags">Tags</string>
    <string name="app_user">User</string>
    <string name="app_moderation">Moderation</string>
    <string name="app_do_cancel">Cancel</string>
    <string name="app_fandoms">Fandoms</string>
    <string name="app_activities">Activities</string>
    <string name="app_fandom">Fandom</string>
    <string name="app_users">Users</string>
    <string name="app_chat">Chat</string>
    <string name="app_chats">Chats</string>
    <string name="app_create">Create</string>
    <string name="app_text">Text</string>
    <string name="app_got_it">Got it</string>
    <string name="app_follow">Follow</string>
    <string name="app_unfollow">Unfollow</string>
    <string name="app_online">Online</string>
    <string name="app_stickers">Stickers</string>
    <string name="app_stickers_pack">Stickers pack</string>
    <string name="app_sticker">Sticker</string>
    <string name="app_was_online">%s online %s</string>
    <string name="app_crop">Crop</string>
    <string name="app_tag">Tag</string>
    <string name="app_category">Category</string>
    <string name="app_is_typing">is typing…</string>
    <string name="app_feed">Feed</string>
    <string name="app_genre">Genre</string>
    <string name="app_genres">Genres</string>
    <string name="app_instrument">Instrument</string>
    <string name="app_purpose">Purpose</string>
    <string name="app_composition">Composition</string>
    <string name="app_type">Type</string>
    <string name="app_platforms">Platforms</string>
    <string name="app_controllers">Controllers</string>
    <string name="app_other_names">Other names</string>
    <string name="app_uploading">Uploading</string>
    <string name="app_administration">Administration</string>
    <string name="app_reject">Reject</string>
    <string name="app_profile">Profile</string>
    <string name="app_image">Image</string>
    <string name="app_voice_message">Voice message</string>
    <string name="app_empty">Empty</string>
    <string name="app_open">Open</string>
    <string name="app_share">Share</string>
    <string name="app_copy_link">Copy link</string>
    <string name="app_copy_link_with_language">Copy link (+language)</string>
    <string name="app_choose_template">Choose a template</string>
    <string name="app_choose_user">Choose user</string>
    <string name="app_moderator">Moderator</string>
    <string name="app_admin">Admin</string>
    <string name="app_protoadmin">Protoadmin</string>
    <string name="app_d">d.</string>
    <string name="app_description">Description</string>
    <string name="app_add">Add</string>
    <string name="app_status">Status</string>
    <string name="app_subscription">Subscription</string>
    <string name="app_subscribe">Subscribe</string>
    <string name="app_unsubscribe">Unsubscribe</string>
    <string name="app_subscriptions">Subscriptions</string>
    <string name="app_subscribers">Subscribers</string>
    <string name="app_wiki">Wiki</string>
    <string name="app_rubric">Rubric</string>
    <string name="app_rubrics">Rubrics</string>
    <string name="app_do_mark">Mark</string>
    <string name="app_do_unmark">Unmark</string>
    <string name="app_remove_image">Remove image</string>
    <string name="app_remove_link">Remove link</string>
    <string name="app_naming">Title</string>
    <string name="app_rename">Rename</string>
    <string name="app_not_required">Not a requirement</string>
    <string name="app_limitations">Limitations</string>
    <string name="app_viceroy">Viceroy</string>
    <string name="moderation_widget_comment">Your comment</string>
    <string name="fandom_viceroy_empty">Not assign</string>
    <string name="intro_update">There is a new version of the application, please update.</string>
    <string name="intro_update_sub">Update on Google Play may not appear immediately.</string>
    <string name="post_page_polling">Polling</string>
    <string name="post_page_polling_options">Options:</string>
    <string name="post_page_polling_lvl_title">Minimum level</string>
    <string name="post_page_polling_karma_title">Minimum karma</string>
    <string name="post_create_link">Link</string>
    <string name="post_create_spoiler_text">How many pages will be hidden?</string>
    <string name="post_create_spoiler_name">Name</string>
    <string name="post_create_notify_followers">Notify your followers</string>
    <string name="post_create_objects_label">Supported links to the user, post, chat, femdom, a stickers pack.</string>
    <string name="post_create_pending">Pending publication</string>
    <string name="post_create_closed">Closed post</string>
    <string name="post_create_rubric">Add rubric</string>
    <string name="post_create_relay_race">Add relay race</string>
    <string name="about_about">About App</string>
    <string name="about_info_1">A very brief description of the main elements and systems of the application. It will allow you to better understand how our community works.</string>
    <string name="about_info_2t">Fandom</string>
    <string name="about_info_2">
        Only one fandom can be created per topic. For example, there can not be two fandoms about Minecraft.
        \n\nFandom exists in several languages ​​at once. The community for each language has its own feed, chat and moderators.
        \n\nTo be a moderator in a fandom you need to reach a certain level in Campfire to unlock moderator functions and score certain amount of karma for 30 days.
        \n\nKarma for 30 days in a fandom is taken into account for the language in which the publication was made.
        \n\nAny actions performed by moderators are published in the \"moderation\" section of the fandom, where they can be assessed and commented.
        \n\nIf there are very few people in the fandom and it is impossible to get the karma necessary for moderation, you can post an \"application\" for the moderator in this fandom and ask the administrator to make you a moderator for the fandom.
    </string>
    <string name="about_info_3t">Chat</string>
    <string name="about_info_3">
        There is 1 global chat for each language for each fandom.
        \n\nImages in the chat are deleted every other day to save server memory.</string>
    <string name="about_info_4t">Level</string>
    <string name="about_info_4">
        It is displayed on the user\'s avatar.
        \n\nUser\'s level affects that user\'s rating to a post.
        \n\nThe level can be increased only by achieving achievements.
        \n\nThe higher the level, the more privileges in the application is unlocked (up to administrative functions).
    </string>
    <string name="about_info_5t">Karma</string>
    <string name="about_info_5">
        Karma is earned by getting ratings on the post, comments and moderation actions.
        \n\nKarma can be subtracted if the scores are negative.
        \n\nKarma is required to use moderator and admin functions.
        \n\nOne user can change the karma of another user only once in 24 hours, all other ratings will only affect the publication.
    </string>
    <string name="about_info_6t">Daily quests</string>
    <string name="about_info_6">
        Displayed at the top of main screen.
        \n\nUpdated at 00:00 server time (UTC+3).
    </string>
    <string name="about_info_7t">Text formatting</string>
    <string name="about_info_7">
        *Bold*
        \n\n^Italic^
        \n\n~Strikethrough~
        \n\n_Underlined_
        \n\n[Link name]link
        \n\n{red Red}{blue Blue}{AA5480 #AA5480}
        \n\n\\ - Makes a character ordinary \\* = *
    </string>
</resources>