<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.sup.dev.android.views.settings.SettingsField
        android:id="@+id/vComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:hint="@string/moderation_widget_comment" />

    <com.sup.dev.android.views.views.ViewButton
        android:id="@+id/vTemplate"
        style="@style/Button.Text"
        android:layout_width="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content"
        android:text="@string/app_choose_template" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <com.sup.dev.android.views.views.ViewButton
            android:id="@+id/vCancel"
            style="@style/Button.Text"
            android:layout_marginEnd="8dp"
            android:text="@string/app_cancel" />

        <com.sup.dev.android.views.views.ViewButton
            android:id="@+id/vEnter"
            style="@style/Button.Text"
            android:text="@string/app_reject" />

    </LinearLayout>

</LinearLayout>
