<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.sup.dev.android.views.settings.SettingsSelection
        android:id="@+id/vCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Settings_title="@string/post_create_spoiler_text"/>

    <com.sup.dev.android.views.settings.SettingsField
        android:id="@+id/vName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textCapSentences|textAutoComplete|textAutoCorrect"
        android:singleLine="true"
        android:hint="@string/post_create_spoiler_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <com.sup.dev.android.views.views.ViewButton
            android:id="@+id/vCancel"
            style="@style/Button.Text"
            android:layout_marginEnd="8dp"
            android:text="@string/app_cancel" />

        <com.sup.dev.android.views.views.ViewButton
            android:id="@+id/vEnter"
            style="@style/Button.Text"
            android:text="@string/app_create" />

    </LinearLayout>

</LinearLayout>
