<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/post_create_objects_label"
        style="@style/TextAppearance.AppCompat.Caption"/>

    <androidx.core.widget.NestedScrollView
        style="@style/Scroll.Widget">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.sup.dev.android.views.settings.SettingsField
                android:id="@+id/vLink"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_create_link"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <com.sup.dev.android.views.views.ViewButton
            android:id="@+id/vCancel"
            style="@style/Button.Text"
            android:layout_marginEnd="8dp"
            android:text="@string/app_cancel"/>

        <com.sup.dev.android.views.views.ViewButton
            android:id="@+id/vEnter"
            style="@style/Button.Text"
            android:text="@string/app_create"/>

    </LinearLayout>


</LinearLayout>