<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <TextView
        android:id="@+id/vTitle"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="8dp"
        android:text="@string/app_viceroy" />

    <com.sup.dev.android.views.views.ViewAvatarTitle
        android:id="@+id/vAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>

    <com.sup.dev.android.views.views.ViewIcon
        android:id="@+id/vMenu"
        style="@style/Icon.18"
        android:layout_marginRight="16dp"
        android:layout_gravity="right|center"
        android:src="@drawable/ic_more_vert_grey_700_18dp" />

    <TextView
        android:id="@+id/vLoading"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/app_loading" />

    <TextView
        android:id="@+id/vEmpty"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/fandom_viceroy_empty" />

    <Button
        android:id="@+id/vRetry"
        style="@style/Button.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/app_retry" />

    <View style="@style/Divider" />

</FrameLayout>