<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?content_background"
    android:orientation="vertical">

    <TextView
        android:text="@string/intro_update"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/vUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center"
        style="@style/Button.Outlined"
        android:text="@string/app_update"/>

    <TextView
        android:text="@string/intro_update_sub"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <View
        android:layout_marginTop="8dp"
        style="@style/Divider"/>

</LinearLayout>
